# BTP

./: .gitignore  goprocalibration.txt  install.sh  myplot.py  plot.py
codes/: sura.cpp
codes/corres/: CorrespondenceGenerator.cpp  CorrespondenceGenerator.h  globals.cpp  main1.cpp  tasks.hpp  utils.cpp  utils.h
experimental/3dviewer/: 3dview.py
experimental/frame-rate/: common.py  frame-rate.py
experimental/new-slam/: CMakeLists.txt  build.sh
experimental/new-slam/scripts/: slam.cpp
experimental/new-slam/src/: correspondance.cc  slam.cpp
experimental/regression/: regression.cpp
experimental/siftcheck/: CMakeLists.txt
experimental/siftcheck/scripts/: feature_matching.cpp  feaure_matching.cpp  sift_check.cpp
experimental/statistics-analysis/: CMakeLists.txt  build.sh
experimental/statistics-analysis/include/: common.h  helpers.h  simulator.h  statistics.h  triangulate.h
experimental/statistics-analysis/scripts/: analysis.py  demo.cpp  depths.cpp  generator.py  sensitivity.cpp
experimental/statistics-analysis/src/: common.cc  simulator.cc  statistics.cc  triangulate.cc
slam/: CMakeLists.txt  build.sh
slam/include/: FishCam.h  ceres_fit.h  correspondance.h  densehelpers.h  helpers.h  indoorhelpers.h  nvmhelpers.h  plyfile.h  pointcloud.h  sifthelpers.h  slam_merger.h  tracking_helpers.h  triangulate.h
slam/include/SiftGpu_loc/: SiftGPU.cpp  SiftGPU.h  SiftPyramid.cpp  SiftPyramid.h
slam/scripts/: autodiff.cpp  corres_new.cpp  cuboid.cpp  densify.cpp  merge_pt_cloud.cpp  merge_slam.cpp  new_dense.cpp  omni2persp.cpp  opengl_view.cpp  place_side.cpp  priors.cpp  slam.cpp
slam/src/: ceres_fit.cc  correspondance.cc  densehelpers.cc  fundamental_matrix_util.cc  helpers.cc  nvmhelpers.cc  pointcloud.cc  sift_processing.cc  sifthelpers.cc  slam_merger.cc  tracking_helpers.cc  triangulate.cc
